# PLCT-Server

./: .gitignore  LICENSE  README.md  build-all.cmd  build-all.sh  dev-server.cmd  dev-server.sample.json  dev-server.sh  plct-server-config-sample.yaml  pyproject.toml  rag-api.cmd  requirements-local.txt
doc/: config.md  getting_started.md
front-app/: README.md  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
front-app/src/: App.test.tsx  App.tsx  AppContext.tsx  index.tsx  setupProxy.js
front-app/src/components/: Chat.css  Chat.tsx  ChatSampleQuestions.tsx  Home.tsx  Layout.tsx  NavMenu.css  NavMenu.tsx
plct_server/: __init__.py  ai.py  ai_templates.py  cli_main.py  content.py  endpoints.py  ioutils.py  main.py  rag_main.py  run_server.py  ui_main.py
plct_server/ai/: __init__.py  client.py  conf.py  context_dataset.py  engine.py  model_conf.py  prompt_templates.py  query_context.py
plct_server/ai/structured_outputs/: query_classification.py
plct_server/content/: course.py  fileset.py  server.py
plct_server/endpoints/: __init__.py  api.py  basic.py  pages.py  rag_api.py  ui_api.py
plct_server/eval/: batch_review.py
plct_server/eval/conversations/: batch_01_positive.json
plct_server/eval/conversations/default/: batch_01_positive.json  batch_02_negative.json
plct_server/eval/conversations/rag/: rag-testing.json
plct_server/eval/conversations/testing/: batch_01_positive.json
plct_server/eval/conversations/testing_rag_precision/: kurs-sedmi.json  rag-testing.json
plct_server/eval/templates/: comparison_template.html
plct_server/templates/: 404.html  index.html
plct_server/www-static/: index.html
