[tool.poetry]
name = "plct-server"
version = "0.3.1"
description = ""
authors = ["Nebojsa Vasiljevic <nebojsa.vasiljevic@gmail.com>"]
license = "MIT"
readme = "README.md"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent"]

packages = [ { include = "plct_server" } ]


[tool.poetry.dependencies]
python = ">=3.10,<4.0"
pydantic = ">=2.0,<3.0"
fastapi = ">=0.95,<1.0"
uvicorn = ">=0.27,<1.0"
rich = ">=13.0,<14.0"
click = ">=8.0,<9.0"
jinja2 = ">=3.0,<4.0"
plct-cli = "*"
openai = "1.40.6"
chromadb = ">=1.4,<1.5"
httpx = "^0.27.0"
aiofiles = "^25.1.0"
pydantic-settings = "^2.12.0"
zstandard = "^0.25.0"
markdown-it-py = "^4.0.0"
tiktoken = "^0.12.0"

[tool.poetry.group.dev.dependencies]
pypandoc = "^1.16"

[build-system]
requires = ["poetry-core", "setuptools"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
plct-serve = "plct_server.cli_main:cli"
plct-batch-review = "plct_server.cli_main:batch_review_cli"